<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl</name>
  <version>0.0.0</version>
  <description>The ROS client library common implementation.
    This package contains an API which builds on the ROS middleware API and is optionally built upon by the other ROS client libraries.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmw</build_depend>

  <exec_depend>ament_cmake</exec_depend>

  <test_depend>rmw</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
