<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclc</name>
  <version>0.0.0</version>
  <description>The ROS client library in C.</description>
  <maintainer email="astralien3000@yahoo.fr">Loïc Dauphin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_generator_c</build_depend>
  <build_depend>rosidl_typesupport_test</build_depend>

  <build_export_depend>rmw</build_export_depend>

  <depend>rcl</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
