<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmw_impl</name>
  <version>0.0.0</version>
  <description>ROS middleware interface implementation switcher.</description>
  <maintainer email="astralien3000@yahoo.fr">Loïc Dauphin</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmw_ndn</build_depend>
  <build_depend>rmw_mqtt</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
