<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>std_msgs</name>
  <version>0.0.0</version>
  <description>A package containing some standard message definitions.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_typesupport_test</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs__rosidl_typesupport_test</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
